<resources>
    <string name="app_name">BinarChapter4</string>
    <string name="kertasAtas">Kertas</string>
    <string name="GuntingAtas">Gunting</string>
    <string name="BatuAtas">Batu</string>
    <string name="VsTengah">Vs</string>
    <string name="Pemain_1">Player</string>
    <string name="Computer">Computer</string>
    <string name="player1Menang">Pemain 1\nMENANG!</string>
    <string name="computerMenang">Computer \nMENANG!</string>
    <string name="hasilDraw">Draw!</string>
</resources>